# OpenCl-Emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/ApiRecording/: ApiRecording.hpp  CMakeLists.txt  RecorderIface.hpp  ThreadedRecorder.cpp  ThreadedRecorder.hpp  ThreadedRecorderImpl.cpp  ThreadedRecorderImpl.hpp
src/ApiTests/: CMakeLists.txt  PlatformTests.cpp
src/Common/: CMakeLists.txt  Common.hpp  Singleton.hpp
src/OpenClBase/: CMakeLists.txt  ClPlatform.cpp  ClPlatform.hpp  ClPtr.hpp  EmulatorPlatform.cpp  EmulatorPlatform.hpp  OpenClBase.cpp  OpenClBase.hpp  PlatformIface.hpp  PlatformRegsitrator.cpp  PlatformRegsitrator.hpp  Ptr.hpp  Utils.cpp  Utils.hpp
src/opencl/: CL.cpp  CMakeLists.txt  devices.cpp  platform.cpp
